Modern Business - FSE - align add block button to right on template editor to stop if conflicting with centred content

--- a/modern-business/style-editor.scss
+++ b/modern-business/style-editor.scss
@@ -1040,3 +1040,15 @@ ul.wp-block-archives,
 		margin: 0;
 	}
 }
+
+/** Align the add block button to right for FSE template editing */
+.site-footer,
+.site-header {
+	.block-editor-block-list__block > .block-editor-block-list__insertion-point {
+    	top: 0;
+  	}
+
+  	.block-editor-block-list__insertion-point-inserter {
+    	justify-content: flex-end;
+  	}
+}
